--- a/music/pyproject.toml
+++ b/music/pyproject.toml
@@ -6,14 +6,15 @@ authors = [
     {name = "Owais Jamil",email = "desertthunder.dev@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "<4.0,>=3.13"
 dependencies = [
     "typer (>=0.19.2,<0.20.0)",
     "fastapi (>=0.118.0,<0.119.0)",
     "ytmusicapi (>=1.11.1,<2.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "uvicorn (>=0.37.0,<0.38.0)",
-    "python-multipart (>=0.0.20,<0.1.0)"
+    "python-multipart (>=0.0.20,<0.1.0)",
+    "loguru (>=0.7.3,<0.8.0)"
 ]
 
 [project.scripts]
